module2 solution complete

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,3 +1,79 @@
-body {
-    background-color: blue;
+* {
+    box-sizing: border-box;
 }
+
+h1 {
+    text-align: center;
+}
+
+section {
+    background-color: gray;
+    border: 1px solid black;
+    padding: 15px 15px;
+    position: relative;
+}
+
+p {
+    margin-top: 20px;
+}
+
+div.row>div {
+    padding: 5px;
+}
+
+section>p.title {
+    border: 1px solid black;
+    width: 150px;
+    text-align: center;
+    margin: 0;
+    padding: 5px 0;
+    font-weight: bold;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+section:nth-child(1)>p.title {
+    background-color: pink;
+    color: black;
+}
+
+
+section:nth-child(2)>p.title {
+    background-color: brown;
+    color: white;
+}
+
+
+section:nth-child(3)>p.title {
+    background-color: beige;
+    color: black;
+}
+
+@media (min-width: 992px) {
+
+    .col-lg-4 {
+        float: left;
+    }
+
+    .col-lg-4 {
+        width: 33.33%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .col-md-6, .col-md-12 {
+        float: left;
+    }
+
+    .col-md-6 {
+        width: 50%;
+    }
+
+    .col-md-12 {
+        width: 100%;
+    }
+}
+
+@media (max-width: 767px) {
+ }
